# nmmlab

./: .gitignore  README.md  pyproject.toml
docs/: about.html  compare.html  explorer.html  index.html  map-buildup.html  map.html  oscillation.html  paper-appendix.html  paper.html  tutorial.html
nmmlab/: __init__.py  ho.py  jansen_rit.py  montbrio.py  stuart_landau.py  wilson_cowan.py
notebooks/: HO simulation.ipynb  NMM1 simulation.ipynb  SL simulation.ipynb  WILCO demo.ipynb  WILCO simulation.ipynb  ho_demo.ipynb
paper_source/: appendix.tex  appendix_WILCO_2_SL.tex  appendix_kuramoto.tex  cover_letter.tex  giulio_references.bib  main.tex  pau_references.bib  references.bib  response_to_reviewer.tex  tablesmodels.tex
site/: compare.html  explorer.html
