[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nmmlab"
version = "0.1.0"
description = "Rosetta Stone of Neural Mass Models — NE × BCOM"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "matplotlib"]

[tool.setuptools.packages.find]
include = ["nmmlab*"]